[package]
name = "rust-cli-tool"
version = "1.0.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis <gabriel@example.com>"]
description = "Professional CLI tool built with Rust"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
